fixed image size

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">How Safe is Chicago?</a></h3>
+                                <h3 class="title"><a href="#" target="_blank">How Safe is Chicago?</a></h3>
                                 <p class="summary">Predictive Analysis of Crime Scenario in Chicago</p>
                                 <div class="featured-image">
                                     <a href="https://public.tableau.com/profile/city.of.chicago.crime.analysis#!/" target="https://public.tableau.com/profile/city.of.chicago.crime.analysis#!/">
@@ -87,7 +87,7 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
-                                <img class="img-responsive project-image" src="assets/images/projects/project-5.png" alt="project name" />
+                                <img class="img-responsive project-image col-md-4 col-sm-4 col-xs-12" src="assets/images/projects/project-5.png" alt="project name" />
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="_blank">Analysis on Million Songs dataset</a></h3>
                                     <p>Music is not just a everyday thing, it's a part of our life. Today, we have hundreds of thousands songs to choose from and that in itself is a challenge. Music is one field that has been unexplored when we talk about Big data.</p>
