fixed image size

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <img class="img-responsive project-image" src="assets/images/projects/project-4.png" alt="project name" />
+                                <img class="img-responsive project-image col-md-4 col-sm-4 col-xs-12" src="assets/images/projects/project-4.png" alt="project name" />
 
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">Online News Popularity Prediction Model</a></h3>
@@ -108,7 +108,7 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <img class="img-responsive project-image" src="assets/images/projects/project-2.png" alt="project name" />
+                                <img class="img-responsive project-image col-md-4 col-sm-4 col-xs-12" src="assets/images/projects/project-2.png" alt="project name" />
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">CommonWealth Guide</a></h3>
                                     <p> This application will help reduce language barrier faced by tourists and improve the traveling experience of the tourists.</p>
