--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li><a href="https://github.com/BandeepSingh"><i class="fa fa-github-alt"></i></a></li>
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <a class="btn btn-cta-primary pull-right" href="" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
         </div><!--//container-->
     </header><!--//header-->
 
@@ -152,9 +152,8 @@
                 <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub</h2>
-                        <p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
                         <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->
-                        <div id="feed" class="feed">
+                        <div id="feed">
                         GitHubActivity.feed({ username: "BandeepSingh", selector: "#feed" });
                         </div><!--//ghfeed-->
 
@@ -294,31 +293,3 @@
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
-=======
-        <!-- Meta -->
-	    <meta charset="utf-8">
-	        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		        <meta name="description" content="!!!">
-			    <meta name="author" content="!!!">
-			        <link rel="shortcut icon" href="favicon.ico">
-				    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-				        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-					    <!-- Global CSS -->
-					        <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-						    <!-- Plugins CSS -->
-						        <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
-							    <!-- github acitivity css -->
-							        <link rel="stylesheet" href="assets/plugins/github-activity/dist/github-activity-0.1.1.min.css">
-								    <link rel="stylesheet" href="assets/plugins/github-activity/dist/octicons/octicons.min.css">
-
-
-								        <!-- Theme CSS -->
-									    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
-									        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-										    <!--[if lt IE 9]>
-										          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-											        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-												    <![endif]-->
-
-												    </head>
