Fixed broken profile pic

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left col-md-8 col-sm-8 col-xs-12" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
                 <h1 class="name">Bandeep Singh</h1>
                 <h2 class="desc">Programmer, Data Science Enthusiast</h2>
